# Gyeol

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.ko.md  README.md  mkdocs.yml  test.gyeol  test_advanced.gyeol
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
bindings/godot_extension/: SConstruct
bindings/godot_extension/src/: gyeol_story_player.cpp  gyeol_story_player.h  gyeol_story_player_adapter.cpp  gyeol_story_player_adapter.h  register_types.cpp  register_types.h
bindings/wasm/: CMakeLists.txt  gyeol_wasm.cpp
bindings/wasm/tests/: runtime_contract_conformance.js
bindings/wasm/web/: index.html
bindings/wasm/web/css/: editor.css  graph.css
bindings/wasm/web/js/: editor-app.js  graph-styles.js  graph-view.js
demo/godot/: main.gd  main.tscn  project.godot
docs/: index.ko.md  index.md  json-ir-spec.md  style-guide.md
docs/advanced/: architecture.ko.md  architecture.md  binary-format.ko.md  binary-format.md  localization.ko.md  localization.md  release-policy.ko.md  release-policy.md  runtime-contract.ko.md  runtime-contract.md  save-load.ko.md  save-load.md
docs/api/: class-runner.ko.md  class-runner.md  class-story-player.ko.md  class-story-player.md  class-variant.ko.md  class-variant.md
docs/getting-started/: godot-integration.ko.md  godot-integration.md  installation.ko.md  installation.md  introduction.ko.md  introduction.md  json-ir-workflow.md  quick-start.ko.md  quick-start.md
docs/scripting/: advanced-features.ko.md  advanced-features.md  flow-control.ko.md  flow-control.md  functions.ko.md  functions.md  syntax.ko.md  syntax.md  variables-and-expressions.ko.md  variables-and-expressions.md
docs/tools/: compiler.ko.md  compiler.md  debugger.ko.md  debugger.md  lsp.ko.md  lsp.md  vscode.ko.md  vscode.md
editors/vscode/: .vscodeignore  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: gyeol.tmLanguage.json
schemas/: gyeol.fbs
src/gyeol_compiler/: CMakeLists.txt  compiler_main.cpp  gyeol_comp_analyzer.cpp  gyeol_comp_analyzer.h  gyeol_graph_tools.cpp  gyeol_graph_tools.h  gyeol_json_export.cpp  gyeol_json_export.h  gyeol_json_ir_reader.cpp  gyeol_json_ir_reader.h  gyeol_json_ir_tooling.cpp  gyeol_json_ir_tooling.h  gyeol_locale_tools.cpp  gyeol_parser.cpp  gyeol_parser.h
src/gyeol_core/: CMakeLists.txt
src/gyeol_core/include/: gyeol_runner.h  gyeol_story.h
src/gyeol_core/src/: gyeol_runner.cpp  gyeol_runner_debug.cpp  gyeol_runner_locale.cpp  gyeol_story.cpp  test_main.cpp
src/gyeol_debugger/: CMakeLists.txt  debugger_main.cpp  gyeol_debugger.cpp  gyeol_debugger.h
src/gyeol_lsp/: CMakeLists.txt  gyeol_analyzer.cpp  gyeol_analyzer.h  lsp_main.cpp  lsp_server.cpp  lsp_server.h
src/tests/: CMakeLists.txt  runtime_contract_cli.cpp  runtime_contract_harness.cpp  runtime_contract_harness.h  runtime_perf_cli.cpp  runtime_perf_tools.cpp  runtime_perf_tools.h  test_graph_tools.cpp  test_helpers.h  test_json_export.cpp  test_json_ir_reader.cpp  test_json_ir_tooling.cpp  test_lsp.cpp  test_parser.cpp  test_runner.cpp  test_runtime_contract.cpp  test_runtime_perf.cpp  test_saveload.cpp  test_story.cpp
src/tests/conformance/: runtime_contract_v1_actions_core_extended.json  runtime_contract_v1_actions_cross.json  runtime_contract_v1_golden_core_cross.json  runtime_contract_v1_story.gyeol  runtime_contract_v1_story.json
src/tests/perf/: choice_filter.gyeol  choice_filter.json  line_loop.gyeol  line_loop.json  locale_overlay.catalog.json  locale_overlay.gyeol  locale_overlay.json  runtime_perf_baseline_core.json  runtime_perf_suite_core.json  typed_command.gyeol  typed_command.json
tools/dev/: activate-toolchains.ps1  bootstrap-toolchains.ps1  build-godot.ps1  build-wasm.ps1  check-docs-policy.py  check-runtime-contract.ps1  doctor-toolchains.ps1  toolchain-versions.ps1  update-runtime-contract-golden.ps1  update-runtime-perf-baseline.py
tools/pygments-gyeol/: pyproject.toml
tools/pygments-gyeol/pygments_gyeol/: __init__.py  lexer.py
