[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygments-gyeol"
version = "0.1.0"
description = "Pygments lexer for the Gyeol (.gyeol) scripting language"
requires-python = ">=3.8"
dependencies = ["pygments>=2.0"]

[project.entry-points."pygments.lexers"]
gyeol = "pygments_gyeol.lexer:GyeolLexer"
